cargo-features = ["edition2024"]

[package]
name = "pinocchio-spl-cpi"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
borsh = "0.10.3"
# mollusk = "0.1.0"
# mollusk-svm = "0.4.0"
pinocchio = "0.8.4"
pinocchio-pubkey = "0.2.4"
pinocchio-system = "0.2.3"
pinocchio-token = "0.3.0"
pinocchio-token-program = "0.0.0"
solana-program = "2.3.0"
spl-token = "8.0.0"
