[package]
name = "magic-trade"
version = "0.1.0"
description = "Flash Trade supercharged with Magicblock Ephemeral Rollups"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "magic_trade"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []


[dependencies]
anchor-lang = "0.32.1"
anchor-spl = "0.32.1"
ephemeral-rollups-sdk = { version = "0.4.0", features = ["anchor"]}
num-traits = "0.2.19"
pyth-solana-receiver-sdk = "1.1.0"


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
